fix scrollbar OK

--- a/pomodoro_frontend/src/styles/style.scss
+++ b/pomodoro_frontend/src/styles/style.scss
@@ -19,6 +19,11 @@ html {
 	outline: none;
 }
 
+::-webkit-scrollbar {
+    width: 0;  /* Remove scrollbar space */
+    background: transparent;  /* Optional: just make scrollbar invisible */
+}
+
 body {
 	position: fixed;
 	height: 100vh;
